# domotics_acces

./: .env.example  .gitignore  COMMANDES.txt  DELIVERABLES.md  Makefile  QUICKSTART.md  README.md
.github/workflows/: ci.yml
app/: .gitignore  README.md  pubspec.yaml
app/lib/: main.dart
app/lib/models/: user.dart
backend/: .env.example  Dockerfile  README.md  check_setup.py  pyproject.toml  requirements.txt  seed.sql  seed_fixed.sql
backend/alembic/: env.py
backend/app/: __init__.py  config.py  db.py  deps.py  main.py
backend/app/api/: auth.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/models/: __init__.py  abonnement.py  acces_app.py  audit_log.py  user.py
backend/app/routers/: auth.py  users.py  ws.py
backend/app/schemas/: abonnement.py  auth.py  user.py
backend/app/security/: passwords.py  tokens.py
backend/app/utils/: audit.py  logging_config.py  rate_limit.py
backend/tests/: conftest.py  test_auth.py  test_users.py
deploy/: Caddyfile.dev  Caddyfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  init.sql
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
mobile/integration_test/: auth_flow_test.dart
mobile/lib/: app.dart  main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
move_access/: README.md  pubspec.yaml
move_access/test/: widget_test.dart
move_access/web/: index.html  manifest.json
ops/scripts/: migrate.sh  seed.py
(+27 files in other folders)
